fix page layout bug for help and about page

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -27,5 +27,5 @@ header {
 }
 
 .header--anchors > a:hover {
-  color: black;
+  color: #c6c6c6;
 }
